Removes /test from gatekeeper

--- a/nginx/conf.d/services.conf
+++ b/nginx/conf.d/services.conf
@@ -17,10 +17,10 @@ server {
                 proxy_set_header X-Forwarded-Proto $scheme;
 		
 	}
-	location /test {
-		rewrite ^/test/(\w+)\.?.*$ $1 last;
-		proxy_pass      https://transfer.costadecaparica.pt/;	
-	}
+	#location /test {
+	#	rewrite ^/test/(\w+)\.?.*$ $1 last;
+	#	proxy_pass      https://transfer.costadecaparica.pt/;	
+	#}
 
 }
 
