--- a/nginx/conf.d/services.conf
+++ b/nginx/conf.d/services.conf
@@ -8,6 +8,7 @@ server {
 		proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
+		client_max_body_size 40M;
         }
 	location /admin {
 		proxy_pass       http://admin:3000;
