--- a/nginx/conf.d/services.conf
+++ b/nginx/conf.d/services.conf
@@ -1,6 +1,6 @@
 server {
         listen 80;
-        server_name fireworks;
+        server_name localhost;
 
         location / {
                 proxy_pass       http://web:3000;
