Adds the validationstructure do container and improves the error in webserver so it shows up in frontend

--- a/validator/Dockerfile
+++ b/validator/Dockerfile
@@ -8,6 +8,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY webserver.py .
 COPY miappe_validator.py . 
+COPY validationstructure.json
 
 LABEL version="1.0"
 
