Add docker-compose deps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - ./.git/modules/ontoBrAPI-node-docker/FETCH_HEAD:/usr/src/app/.FETCH_HEAD
     depends_on:
       - db
+      - validator
     networks:
       - backend
 
