--- a/nginx/conf.d/services.conf
+++ b/nginx/conf.d/services.conf
@@ -18,6 +18,22 @@ server {
                 proxy_set_header X-Forwarded-Proto $scheme;
 		
 	}
+	location /staging {
+		proxy_pass       http://admin:3000;
+		proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+	        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+		
+	}
+	location /ontobrapi {
+		proxy_pass       http://admin:3000;
+		proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+	        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+		
+	}
 
 }
 
