--- a/.config.json
+++ b/.config.json
@@ -19,7 +19,7 @@
   },
   "admin": {
     "protocol": "http",
-    "hostname": "192.168.1.7",
+    "hostname": "admin",
     "port": 3000,
     "path": "/admin/brapi/dataset/submit/",
     "method": "POST"
