--- a/.config.json
+++ b/.config.json
@@ -24,6 +24,7 @@
   },
   "admin": {
     "protocol": "http",
+    "hostname-Testing": "192.168.1.7",
     "hostname": "admin",
     "port": 3000,
     "path": "/admin/brapi/dataset/submit/",
